--- a/codefresh-build-5.yml
+++ b/codefresh-build-5.yml
@@ -9,7 +9,11 @@ steps:
     dockerfile: Dockerfile
     tag: latest
 
-  push-dockerhub:
+  push-image:
     type: push
     candidate: ${{build-example}}
     tag: latest
+    registry: dtr.host.com
+    credentials:
+      username: ${{username}}
+      password: ${{password}}
